# vibecraft-framework

./: .coverage  INSTALL.md  README.md  REFACTORING_REPORT.md  RELEASE_NOTES_v0.4.0.md  configure_path.py  install-to-project.py  install.bat  install.ps1  install.py  pyproject.toml  pytest.ini  setup.py  vibecraft.bat
docs/: INTEGRATION_GUIDE.md  MIGRATION_SIMPLE_TO_MODULAR.md  MODULAR_MODE.md  MODULE_DEVELOPMENT.md
docs/dev/: AUDIT_REPORT.md  CLEANUP_REPORT.md  QWEN.md  research.md  stack.md
examples/: custom_agents.yaml  research.md  stack.md
examples/example-asteriods/: QWEN.md  jest.config.js  jest.setup.js  package-lock.json  package.json  research.md  vibecraft-local.bat
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_bootstrapper.py  test_cli_complete.py  test_cli_doctor.py  test_cli_export.py  test_cli_init.py  test_cli_integrate.py  test_cli_module.py  test_cli_run.py  test_cli_status.py  test_context_manager.py  test_doctor.py  test_exporter.py  test_main.py  test_rollback.py  test_runner.py
vibecraft/: __init__.py  bootstrapper.py  cli.py  context_manager.py  doctor.py  exporter.py  main.py  rollback.py  runner.py
vibecraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vibecraft/adapters/: __init__.py  base_adapter.py  clipboard_adapter.py  echo_adapter.py  factory.py  qwen_adapter.py
vibecraft/core/: __init__.py  base_bootstrapper.py  base_runner.py  config.py  exceptions.py  factory.py  migrations.py  protocols.py
(+214 files in other folders)
