[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vibecraft"
version = "0.1.0"
description = "Agent-driven development framework. Craft your project from a research idea."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pyperclip>=1.8",
]

[project.scripts]
vibecraft = "vibecraft.cli:main"

[tool.setuptools.packages.find]
where = ["."]
