[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecraft"
version = "0.3.0"
description = "Agent-driven development framework. Craft your project from a research idea."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
vibecraft = "vibecraft.main:main"

[tool.setuptools.packages.find]
where = ["."]
